--- a/app/views/episodes/_form.haml
+++ b/app/views/episodes/_form.haml
@@ -16,7 +16,6 @@
         = f.label I18n.t('patients.form.history')
       .col-6
         = f.collection_select :initial_history, Episode.initial_history_options, :id, :name, include_blank: I18n.t('select.default')
-        %hr
         = f.collection_select :previous_history, Episode.previous_history_options, :id, :name, include_blank: I18n.t('select.default')
     .row
       .col-6
@@ -28,9 +27,8 @@
         = f.label :drug_resistance
       .col-6
         = f.collection_select :drug_resistance, Episode.drug_resistance_options, :id, :name, include_blank: I18n.t('select.default')
-    .row
-    = react_component 'EpisodeSelectOutcome', outcomeOptions: outcome_options, selected: @episode.outcome
-    .row
-      .col-6
+    .zebra  
+      = react_component 'EpisodeSelectOutcome', outcomeOptions: outcome_options, selected: @episode.outcome
+    .row.button-actions
+      .col
         = f.submit
-      .col-6
