--- a/app/assets/stylesheets/_card.scss
+++ b/app/assets/stylesheets/_card.scss
@@ -28,6 +28,15 @@
     padding: 15px 0 10px 15px;
     width: 100%;
     position: relative;
+    display:flex;
+
+    ul {
+    padding:0 15px;
+
+      label {
+        min-width:120px;
+      }
+    }
 
     .card-actions {
       position: absolute;
