--- a/app/assets/stylesheets/_testflow.scss
+++ b/app/assets/stylesheets/_testflow.scss
@@ -278,11 +278,8 @@ body {
   .button:hover {
     opacity: 0.8;
   }
-  form.zebra .panel .row:nth-child(even) {
-    background: #dbdae2;
-    > div {
-      padding: 1rem 0.5rem;
-    }
+  form.zebra .panel .row > div{
+      padding: 0.5rem 0rem;
   }
   .panel .row:last-child {
     margin-bottom: 0px;
