Tab based Episode choice (1835)

--- a/app/views/episodes/_form.haml
+++ b/app/views/episodes/_form.haml
@@ -22,11 +22,11 @@
   .testflow
     %ul.tab#epitabs
       %li#tab_tb
-        = link_to I18n.t('episodes.episode_type.tb'),'#'
+        = link_to I18n.t('episode_type.tb'),'#'
       %li#tab_hiv
-        = link_to I18n.t('episodes.episode_type.hiv'),'#'
+        = link_to I18n.t('episode_type.hiv'),'#'
       %li#tab_ebola
-        = link_to I18n.t('episodes.episode_type.ebola'),'#'
+        = link_to I18n.t('episode_type.ebola'),'#'
 
   .panel#episodetype_ebola
     .row
