--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -378,8 +378,8 @@ text-align:center;
 }
 
 .side-link{
-  margin-left:10px !important;
-  margin-right:20px !important;
+  margin-left:10px;
+  margin-right:20px;
 }
 
 .newtestoptions .side-link {
