--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -304,7 +304,7 @@ color:#fff !important;
   flex-flow:row wrap;
   justify-content:flex-start;
 }
-/*  SETTINGS STYLES START HEREEEEEEEE */
+/*  SETTINGS STYLES START HERE */
 .testflow .settings {justify-content:center;}
 .testflow .centered {text-align:center;}
 .testflow .col.px-4 {
@@ -314,8 +314,6 @@ color:#fff !important;
     -ms-flex: 0 0 300px;
     flex: 0 0 24.667%;
 }
-.testflow .col:hover {opacity:0.8;cursor: pointer;}
-/* THATS IT */
 
 /*  COLUMN SETUP  */
 
@@ -849,6 +847,8 @@ padding:15px;
 
     p {
       font-size:12px;
+      line-height:12px;
+      text-transform:capitalize;
     }
 }
 .buttonActions {
