--- a/app/views/dst_lpa_results/_form.haml
+++ b/app/views/dst_lpa_results/_form.haml
@@ -1,73 +1,80 @@
 = form_for([@requested_test, @dst_lpa_result], url: requested_test_dst_lpa_result_path(@requested_test, @dst_lpa_result), html: { autocomplete: 'off' }) do |f|
   = validation_errors @dst_lpa_result
   .row
-    %table
-      %thead
-        %tr
-          %th
-            = f.label :sample_collected_on
-          %th
-            = f.label :media_used
-          %th
-            = f.label :serial_number
-          %th
-            = f.label :results_h
-          %th
-            = f.label :results_r
-          %th
-            = f.label :results_e
-          %th
-            = f.label :results_s
-          %th
-            = f.label :results_amk
-          %th
-            = f.label :results_km
-          %th
-            = f.label :results_cm
-          %th
-            = f.label :results_fq
-          %th
-            = f.label :results_other1
-          %th
-            = f.label :results_other2
-          %th
-            = f.label :results_other3
-          %th
-            = f.label :results_other4
-      %tbody
-        %tr
-          %td
-            = f.date_field :sample_collected_on
-          %td
-            = f.collection_select :media_used, DstLpaResult.method_options, :first, :last
-          %td
-            = f.text_field :serial_number
-          %td
-            = f.collection_select :results_h, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_r, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_e, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_s, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_amk, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_km, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_cm, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.collection_select :results_fq, DstLpaResult.dst_lpa_options, :first, :last
-          %td
-            = f.text_field :results_other1
-          %td
-            = f.text_field :results_other2
-          %td
-            = f.text_field :results_other3
-          %td
-            = f.text_field :results_other4
-
-
+    .col.pe-2
+      = f.label :sample_collected_on
+    .col
+      = f.date_field :sample_collected_on
+  .row
+    .col.pe-2
+      = f.label :media_used
+    .col
+      = f.collection_select :media_used, DstLpaResult.method_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :serial_number
+    .col
+      = f.text_field :serial_number
+  .row
+    .col.pe-2
+      = f.label :results_h
+    .col
+      = f.collection_select :results_h, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_r
+    .col
+      = f.collection_select :results_r, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_e
+    .col
+      = f.collection_select :results_e, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_s
+    .col
+      = f.collection_select :results_s, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_amk
+    .col
+      = f.collection_select :results_amk, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_km
+    .col
+      = f.collection_select :results_km, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_cm
+    .col
+      = f.collection_select :results_cm, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_fq
+    .col
+      = f.collection_select :results_fq, DstLpaResult.dst_lpa_options, :first, :last
+  .row
+    .col.pe-2
+      = f.label :results_other1
+    .col
+      = f.text_field :results_other1
+  .row
+    .col.pe-2
+      = f.label :results_other2
+    .col
+      = f.text_field :results_other2
+  .row
+    .col.pe-2
+      = f.label :results_other3
+    .col
+      = f.text_field :results_other3
+  .row
+    .col.pe-2
+      = f.label :results_other4
+    .col
+      = f.text_field :results_other4
   .row
     .col.pe-2
       = f.label :examined_by
