--- a/app/views/xpert_results/new.haml
+++ b/app/views/xpert_results/new.haml
@@ -1,11 +1,14 @@
-#new-xpert-results.testflow
-  .container
-    .row.labelHeader
-      .col-6
-        %h3
-          = I18n.t('xpert_results.new.header', patient_name: patient_display_name(@xpert_result.patient.name))
-      .col-6
-        %ul
-          %li
-            = link_to I18n.t('views.back'), encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'button new'
-    = render 'form'
+#new-xpert-results
+  .row.center.add-new.collapse
+    .col.pe-10
+      %h2
+        = link_to encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'side-link', title: 'Back' do
+          = image_tag "arrow-left-white.png"
+        = I18n.t('xpert_results.new.header', patient_name: patient_display_name(@xpert_result.patient.name))
+  %section.row
+    .small-12.columns
+      %header
+        %h3 
+          Details
+      .box-content
+        = render 'form'
