Ensure button is restored after closing modal.

--- a/app/assets/javascripts/components/modal.js.jsx.erb
+++ b/app/assets/javascripts/components/modal.js.jsx.erb
@@ -16,8 +16,10 @@ var Modal = React.createClass({
   },
 
   hideOnOuterClick: function(event) {
-    if (this.getDOMNode() == event.target)
-      this.hide();
+    if (this.props.hideOuterEvent instanceof Function ) {
+     this.props.hideOuterEvent();
+   } else if (this.getDOMNode() == event.target)
+     this.hide();
   },
 
   handleKeyDown: function(event) {
