--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -12,7 +12,7 @@
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 99999;
+  z-index: 9999999;
 
   .modal {
     background: $white;
