--- a/app/views/encounters/show.html.haml
+++ b/app/views/encounters/show.html.haml
@@ -8,4 +8,15 @@
               = image_tag "arrow-left-white.png"
             = I18n.t('encounters.show.test_order')
 
-= react_component('EncounterShow', encounter: @encounter_as_json, context: @navigation_context, requested_tests: @encounter.requested_tests, requested_by: @encounter.user !=nil ? @encounter.user.email : '', can_update: @can_update, show_edit: @show_edit_encounter, show_cancel: @show_cancel_encounter, referer: @return_path_encounter, status_types: RequestedTest.statuses, associated_tests_to_results: @associated_tests_to_results)
+= react_component('EncounterShow',
+  encounter: @encounter_as_json,
+  context: @navigation_context,
+  requestedTests: @encounter.requested_tests,
+  requested_by: @encounter.user !=nil ? @encounter.user.email : '',
+  can_update: has_access?(@encounter, Policy::Actions::UPDATE_ENCOUNTER),
+  show_edit: @show_edit_encounter,
+  show_cancel: @show_cancel_encounter,
+  referer: @return_path_encounter,
+  statusTypes: RequestedTest.statuses,
+  associatedTestsToResults: PatientResult.find_associated_tests_to_results(@encounter),
+  showDstWarning: @encounter.requested_tests.show_dst_warning)
