--- a/app/views/culture_results/_form.haml
+++ b/app/views/culture_results/_form.haml
@@ -17,46 +17,29 @@
       = f.text_field :serial_number
   .row
     .col.pe-2
-      = f.label :results_negative
+      = f.label :test_result
     .col
-      = f.check_box :results_negative
-      %label{for: 'culture_result_results_negative'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_1to9
-    .col
-      = f.check_box :results_1to9
-      %label{for: 'culture_result_results_1to9'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_1plus
-    .col
-      = f.check_box :results_1plus
-      %label{for: 'culture_result_results_1plus'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_2plus
-    .col
-      = f.check_box :results_2plus
-      %label{for: 'culture_result_results_2plus'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_3plus
-    .col
-      = f.check_box :results_3plus
-      %label{for: 'culture_result_results_3plus'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_ntm
-    .col
-      = f.check_box :results_ntm
-      %label{for: 'culture_result_results_ntm'} &nbsp;
-  .row
-    .col.pe-2
-      = f.label :results_contaminated
-    .col
-      = f.check_box :results_contaminated
-      %label{for: 'culture_result_results_contaminated'} &nbsp;
+      = f.radio_button :test_result, 'negative'
+      %label{for: 'culture_result_test_result_negative'}
+        = I18n.t('select.microscopy.test_result_options.negative')
+      = f.radio_button :test_result, '1to9'
+      %label{for: 'culture_result_test_result_1to9'}
+        = I18n.t('select.microscopy.test_result_options.1to9')
+      = f.radio_button :test_result, '1plus'
+      %label{for: 'culture_result_test_result_1plus'}
+        = I18n.t('select.microscopy.test_result_options.1plus')
+      = f.radio_button :test_result, '2plus'
+      %label{for: 'culture_result_test_result_2plus'}
+        = I18n.t('select.microscopy.test_result_options.2plus')
+      = f.radio_button :test_result, '3plus'
+      %label{for: 'culture_result_test_result_3plus'}
+        = I18n.t('select.microscopy.test_result_options.3plus')
+      = f.radio_button :test_result, 'ntp'
+      %label{for: 'culture_result_test_result_ntp'}
+        = I18n.t('select.culture.test_result_options.ntp')
+      = f.radio_button :test_result, 'contaminated'
+      %label{for: 'culture_result_test_result_contaminated'}
+        = I18n.t('select.culture.test_result_options.contaminated')
   .row
     .col.pe-2
       = f.label :examined_by
