--- a/app/views/dst_lpa_results/new.haml
+++ b/app/views/dst_lpa_results/new.haml
@@ -3,13 +3,13 @@
     %h2
       = link_to encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'side-link', title: 'Back' do
         = image_tag "arrow-left-white.png"
-      Drug Susceptibility Results
+      = I18n.t('dst_lpa_results.new.header')
 
 #dst-lpa-results.testflow
   .container
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('dst_lpa_results.new.header', patient_name: patient_display_name(@dst_lpa_result.patient.name))
+          = I18n.t('dst_lpa_results.new.add_new', patient_name: patient_display_name(@dst_lpa_result.patient.name))
       .col-6
     = render 'form'
