--- a/app/views/shared/_display_boolean_value.haml
+++ b/app/views/shared/_display_boolean_value.haml
@@ -2,4 +2,4 @@
   = label_name
 .show-checkbox
   = check_box_tag field_name, field_value, field_value, { disbled: true }
-  %label{for: 'microscopy_result_results_negative'} &nbsp;
+  %label{ for: "#{field_name}_#{field_value}" } &nbsp;
