--- a/app/views/encounters/new.html.haml
+++ b/app/views/encounters/new.html.haml
@@ -11,6 +11,6 @@
         .col-6.right
           %ul
             %li
-              = link_to(I18n.t('views.back'), patient_path(@patient), class: 'button cancel')
+              = link_to(I18n.t('views.back'), new_index_encounters_path, class: 'button cancel')
 
-= react_component('EncounterNew', context: @navigation_context.to_hash, patient_id: @patient.id, mode: params[:mode], possible_assay_results: @possible_assay_results, referer: @return_path_encounter)
+= react_component('EncounterNew', context: encounter_context(@navigation_context), patient_id: @patient.id, mode: params[:mode], possible_assay_results: @possible_assay_results, referer: @return_path_encounter)
