Add tabs to test results.

--- a/app/assets/stylesheets/_newdash.scss
+++ b/app/assets/stylesheets/_newdash.scss
@@ -214,7 +214,7 @@ body {
 
 @media only screen and (max-width: 480px) {
   .container fieldset {
-    margin-top: 0.5em; 
+    margin-top: 0.5em;
   }
 }
 
@@ -287,7 +287,7 @@ body {
 
 #contentcontainer tr:nth-child(even) {
   background-color: #dbdae2;
-} 
+}
 
 #contentcontainer tr:nth-child(even):hover {
   opacity:0.8;
@@ -310,7 +310,7 @@ body {
 .container .col-4 {min-width: 31.26%;flex:1 1 31.26%;}
 .container .col-3 {min-width: 22.8%;flex:1 1 22.8%;}
 .container .col-2{min-width: 14.33%;flex:1 1 14.33%;}
-.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;} 
+.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;}
 
 
 
@@ -484,7 +484,7 @@ padding:3px 80px 3px 5px;
 min-width:100% !important;
 }
 
-/* Dashboard Styles */ 
+/* Dashboard Styles */
 #contentcontainer .row .columns div.search {height:40px;background:#e06023;position:fixed;top:0px;width:100%;left:300px;top:60px;z-index:999;}
 #contentcontainer .dashboard main {margin-top:50px;}
 .dashboard {padding:10px;}
@@ -539,7 +539,7 @@ margin-bottom: 20px;
   .card {
     margin:10px 15px;
   }
-} 
+}
 form#new_device {
   margin:0px;
   padding:0px;
@@ -594,7 +594,7 @@ form#new_device {
   li button {top:0px;left:3px;}
   .selected::before {height:29px;}
   li {font-size:12px;line-height:30px;}
-} 
+}
 
 .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder, .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder {color:#fff;}
 .show-navigation-context-picker #context_side_bar .search-sites {background:#555 !important;color:#fff !important;}
@@ -912,13 +912,13 @@ form#new_device {
   }
 }
 
-.testflow ul.tab li a {
+.testflow ul.tabs li a {
   font-size:12px!important;
 }
 
 section.newPatientContainer, section.editPatientContainer, .optionsarea {
   padding:10px 20px 10px 15px;
-} 
+}
 .optionsarea {
   padding:10px 20px 10px 15px;
 
@@ -965,7 +965,7 @@ form#new_patient, form.edit_patient{
   .value {
     line-height:40px;
   }
-  
+
   input.input-large {
     border:1px solid #e2e2e2;
     background:#fff;
@@ -1036,7 +1036,7 @@ form.edit_patient div.row:nth-child(even), form.edit_patient div .row {
   background:#fff;
 }
 
-/* Test Results Styles */ 
+/* Test Results Styles */
 #contentcontainer #contentsection .filterbar {
   height:40px;
   float:none;
@@ -1158,7 +1158,7 @@ form#filters-form.filteroptions {
       padding:0px 120px 0px 0px;
     }
   }
-} 
+}
 
 #contentsection table {
   margin:0px;
@@ -1545,7 +1545,7 @@ html {
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%; }}
-  
+
 #contentcontainer header img{
 height:20px;
 width:auto !important;
@@ -1585,7 +1585,7 @@ display:none;
 font-size:12px;
 }
 
-.add-new, #contentsection .devicearea .add-new{ 
+.add-new, #contentsection .devicearea .add-new{
 background:#e06023;
 }
 
@@ -1677,4 +1677,3 @@ form#new_microscopy_result {
     input:hover, .btn-link:hover {opacity:0.8;cursor:pointer;}
   }
 }
-
